@@ -1,5 +1,10 @@
 # $Id$
 
+2007-01-22	Konstantin V. Arkhipov
+
+	* main/DAOs/Handlers/SharedMemorySegmentHandler.class.php: segments
+	are now created with 0660 permission, instead of 0600.
+
 2007-01-11	Konstantin V. Arkhipov
 
 	* core/DB/ImaginaryDialect.class.php: missing toString added to
